Revisão para permitir busca por parametros query string em metodos GET
